Fix regression about image z-index for overlay

--- a/front/style.scss
+++ b/front/style.scss
@@ -335,6 +335,8 @@ h3.title {
         padding-top: 70px;
         height: 100%;
 
+        z-index: -1;
+
         .type, .cp-value {
           margin: 2px auto;
         }
